# ez80-for-rc

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  EZ80-RC2014.ztgt  LICENSE  README.md  clang-format.sh  gh-build-and-package.ps1  gh-release-notes.ps1  gh-release.ps1.retired  make-debug.bat  make-jed.bat  make-release.bat  make-simulate.bat  rc2014-firmware.zdsproj  readme-original.md  readme.md  release-notes.sh  simplest.zdsproj  zsldevinit.asm
.github/workflows/: ez80-for-rc.yml
Release/: simplest_Release.linkcmd  simplest_Release.mak
apps/: Makefile  common.mk  readme.md
apps/cfiles/: Makefile  cfiles.c
apps/common/: Makefile  config_request.c  config_request.h  ez80-firmware.h  ez80-instr.inc  hbios_sysget_tick.asm  hbios_sysget_tick.h  hbios_timer.h  i2c.asm  i2c.h  ifl.h  v9958.asm  v9958.c  v9958.h
apps/cpm_bdos_examples/: main.c
apps/cpmexmpl/: Makefile  build.sh  main.c
apps/cube/: Makefile  build.sh  cube.c  cube.html  large_palette.c
apps/dhry/: Makefile  dhry.h  dhry_1.c  dhry_2.c  jiffy.c  readme.md  zpragma.inc
apps/exe/: Makefile  build.sh  discover_installed_ram.c  exe.c  marshaller.asm  readme.md
apps/ez80/: Makefile  build.sh  config-flash.c  config-io.c  config-mem.c  config-mem0.c  config-mem1.c  config_set_tick_rate.c  ez80-instr.inc  ez80.c  ez80.h  ez80_bus_cycles_get.asm  ez80_cpu_freq_get.asm  ez80_io_bus_cycles_get.asm  ez80_mem0_bus_cycles_set.asm  ez80_mem_bus_cycles_get.asm  ez80_mem_bus_cycles_set.asm  find-extended-memory.c  measure-main-memory-performance.asm  nanoprintf.c  readme.md  report-main-memory-performance.c  report-memory-timing.c  support_emulation.asm  test-at.asm  validate-mem-set-value.c
apps/fcntl/: Makefile  fcntl.c
apps/fwmain/: Makefile  (+1 more)
debug/: rc2014-firmware_debug.linkcmd  rc2014-firmware_debug.mak  simplest_debug.linkcmd  simplest_debug.mak
docs/: .gitignore  Dockerfile  Gemfile  _config.yml  entrypoint.sh  ez80-cpu-module-pinout.ods  ez80-for-rc-user-manual.md  host-locally-notes.md  index.md  pi-pico-programmer.md  todo.md
firmware/: Dockerfile  EZ80-RC2014.ztgt  Makefile  clean.bat  ez80-for-rc-firmware.zdsproj  make-alt-debug.bat  make-alt-release.bat  make-clean.bat  make-debug.bat  make-release.bat  make-zexall.bat  rc2014-firmware.zdsproj  readme.md  zsldevinit.asm
hardware/: 5vcomp  Dockerfile  bom.md  dram-controller.pld  dram-multiplexer.pld  dram-refresh.pld  ez80-cpu-v1.5a.pld  ez80-cpu-v1.5b.pld  ez80-cpu-v1.7.pld  make-jed.bat  make-jed.sh  readme.md  spike.pld
operating-systems/: readme.md
programmer/: .gitignore  CMakeLists.txt  Dockerfile  blink.pio  build.sh  command_dispatcher.c  command_dispatcher.h  convert_hex_to_c.sh  convert_inc_to_c.sh  ez80-rc-firmware-release.hex  ez80f92.h  firmware-version.inc  hex_record.c  hex_record.h  ifl.c  ifl.h  led.c  led.h  main.c  main.h  read_line.c  read_line.h  readme.md  utils.c  utils.h  zdi.c  zdi.h
release/: rc2014-firmware_Release.linkcmd  rc2014-firmware_Release.mak  rc2014-firmware_release.linkcmd  rc2014-firmware_release.mak
simulate/: rc2014-firmware_simulate.linkcmd  rc2014-firmware_simulate.mak  simplest_simulate.linkcmd  simplest_simulate.mak
src/: 60-hz-counter.s  config.inc  console.c  io-hook.s  jump_table.s  main.c  main.s  rc2014-512k-rom-ram.c  rc2014-digital-io.c  rc2014-hook.s  rst-08-io.s  rst-10-constants.inc  rst-10-functions.s  rst-10-rc2014-fnc.s  rst-18-rc2014-bank-switch.s  rst-io.s  rst-rc2014-bank-switch.s  rst-rc2014-fnc.s  test.s  uart.c  uart.h
tools/: gitaddz
(+783 files in other folders)
